--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name=pyacgt
-version=0.1.2b1
+version=0.1.2b3
 author=Nick Meyer
 author_email=nmeyer5435@gmail.com
 license=GPLv3+
@@ -25,6 +25,7 @@ classifiers =
     Operating System :: Microsoft :: Windows
     Operating System :: POSIX :: Linux
     Operating System :: Unix
+    Operating System :: MacOS
     Topic :: Software Development :: Libraries :: Python Modules
     Topic :: Education
     Intended Audience :: Science/Research
@@ -40,3 +41,6 @@ install_requires =
     typing_extensions>=4.0.0
 include_package_data=True
 python_requires=>=3.7.0
+
+[options.packages.find]
+where=src
