--- a/setup.cfg
+++ b/setup.cfg
@@ -32,9 +32,9 @@ classifiers =
     License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
 
 [options]
+packages=find:
 package_dir =
     =src
-packages=find:
 zip_safe=False
 install_requires =
     typing>=3.7.0
@@ -42,5 +42,15 @@ install_requires =
 include_package_data=True
 python_requires=>=3.7.0
 
+[options.data_files]
+bin =
+    bin/acme_linux
+    bin/acme_win.exe
+    bin/acme_osx
+
+
 [options.packages.find]
 where=src
+
+[bdist_wheel]
+universal = 1
